# dbt-medallion-demo

./: .gitignore  .pre-commit-config.yaml  .user.yml  DEMO.md  README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
demo/: catalog.json  manifest.json  modern-docs.html
models/bronze/: bronze_customers.sql  bronze_orders.sql  bronze_products.sql  schema.yml
models/gold/: gold_country_summary.sql  gold_customer_summary.sql  gold_daily_sales.sql  schema.yml
models/silver/: schema.yml  silver_customers.sql  silver_orders.sql  silver_products.sql
seeds/: raw_customers.csv  raw_orders.csv  raw_products.csv
