[project]
name = "dbt-medallion-demo"
version = "1.0.0"
description = "dbt Medallion Architecture demo with dbt-duckdb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
